Fix columns being too wide when text is short.

--- a/src/DynamicProgrammingTable.css
+++ b/src/DynamicProgrammingTable.css
@@ -1,7 +1,6 @@
 .DynamicProgrammingTable {
   font-family: monospace;
 
-  min-width: 500px;
   margin-left: auto;
   margin-right: auto;
 
